added new instruction manual on AuthorToolkit page

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -44,35 +44,55 @@
 
 				</div>
 
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row 200%">
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major round-toolkit-img"></i>
-									<h3>Templates</h3>
-									<a href="files/Paper_Template.docx"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a> <br/><br/>
-									<a href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html" target="_blank"> <img alt="Latex Document" src="images/latex.png" width="70" height="60"> </a>
-								</div>
-							</section>
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major round-paper-call-img"></i>
-									<h3>Call for Papers</h3>
-									<a href="files/CfP_TXWMCS2017.pdf"><img alt="Call for Papers" src="images/pdf.png" target="_blank" width="70" height="80"/></a>
-										</p>
-								</div>
-							</section>
-							<section class="4u 12u(narrower)">
-								<div class="box highlight">
-									<i class="icon major round-submit-img"></i>
-									<h3>Paper Submission</h3>
-									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></p>
-								</div>
-							</section>
+				<!-- Posts -->
+					 <section class="wrapper style1">
+						<div class="container">
+							<div class="row">
+								<section class="6u 12u(narrower)">
+									<div class="box post">
+										<a href="#" class="image left"><img src="images\toolkit.jpg" alt="" /></a>
+										<div class="inner">
+											<h3>Templates</h3>
+											<p><b>
+											<a href="files/Paper_Template.docx"><img alt="Word Document" src="images/Word.jpg" width="70" height="80"></a> <br/><br/>
+											<a href="http://www.ieee.org/conferences_events/conferences/publishing/templates.html" target="_blank"> <img alt="Latex Document" src="images/latex.png" width="70" height="60"> </a>
+
+										</b></p>
+										</div>
+									</div>
+								</section>
+								<section class="6u 12u(narrower)">
+									<div class="box post">
+										<a href="#" class="image left"><img src="images/instructions.png" alt="" /></a>
+										<div class="inner">
+											<h3>Instructions for Authors</h3>
+											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/></a></b></p>
+										</div>
+									</div>
+								</section>
+							</div>
+							<div class="row">
+								<section class="6u 12u(narrower)">
+									<div class="box post">
+										<a href="#" class="image left"><img src="images/call.jpg" alt="" /></a>
+										<div class="inner">
+										<h3>Call for Papers</h3>
+											<p><b><a href="files/CfP_TXWMCS2017.pdf" target="_blank"><img alt="Call for Papers" src="images/pdf.png"  width="70" height="80"/></a></b></p>
+										</div>
+									</div>
+								</section>
+								<section class="6u 12u(narrower)">
+									<div class="box post">
+										<a href="#" class="image left"><img src="images/submit.jpg" alt="" /></a>
+										<div class="inner">
+											<h3>Paper Submission</h3>
+											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>
+										</div>
+									</div>
+								</section>
+							</div>
 						</div>
-					</div>
-				</section>
+					</section>
 
 
 				<!-- Footer -->
