--- a/Sponsors.html
+++ b/Sponsors.html
@@ -54,13 +54,14 @@
                 		</ul>
                   <h2><b><u>Corporate Sponsors</u></b></h2>
                     <ul class="icons">
-                      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="250px" height="40px" /></a></li>
+                      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="280px" height="50px" /></a></li>
                       <li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
-                      <li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="200px" height="50px"/></a></li>
-                      <li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="50px"/></a></li>
-                      <li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="250px" height="50px"/></a></li>
+                      <li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="220px" height="60px"/></a></li>
+                      <li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="60px"/></a></li>
+                      <li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="260px" height="70px"/></a></li>
 											<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="260px" height="90px"/></a></li>
-											<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png" width="250px" height="70px"/></a></li>
+											<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png" width="210px" height="70px"/></a></li>
+											<li><a href="http://www.signalcore.com/" class="icon" target="_blank"><img src="images/SignalCoreLogo.jpg" width="240px" height="60px"/></a></li>
                     </ul>
 					</div>
 				</section>
@@ -98,15 +99,16 @@
 					<ul class="icons sponsor_img">
 						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
 						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
-			      <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
+					</ul>
+					<ul class="icons sponsor_img">
+						<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
 						<li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png"/></a></li>
 						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
 						<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="100px !important"  height="60px" /></a></li>
 						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
 						<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png"/></a></li>
 						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
-
-
+						<li><a href="http://www.signalcore.com/" class="icon" target="_blank"><img src="images/SignalCoreLogo.jpg"/></a></li>
 					</ul>
         <br/><br/>
 					<!-- Icons -->
