Fixed IEEE and MTTS logos and added registration information

--- a/Registration.html
+++ b/Registration.html
@@ -51,12 +51,31 @@
 							<article>
 								<header>
 									<!-- <i class="icon major round-register-img"></i> -->
-										<!-- <p><b><a href="Registration.html" target="_blank">2017 Conference Registration </a></b></p> -->
+
 											<p><b>Conference Registration</b></p>
-												<h2><b>Coming Soon!</h2></p>
-								</header>
+							 </header>
 								<!-- <iframe src="Registration.html" style="border:2px solid black;" height="1000" width="1100">&nbsp;</iframe> -->
+								<p><b><a href="http://www.regonline.com/texassymposium" target="_blank">Click Here for 2017 Conference Registration</a></b></p>
 							</article>
+							<section>
+								<div>
+								<p><b>Registration to the conference includes:</b></p>
+
+								<ul>
+										<li><b>1-&nbsp; Attendance at conference plenary, technical paper sessions and workshop tutorials</b></li>
+										<li><b>2-&nbsp;Exhibition of sponsoring companies</b></li>
+										<li><b>3-&nbsp;Dinner on Thursday and lunch on Friday</b></li>
+										<li><b>4-&nbsp;Light refreshments during coffee breaks</b></li>
+										<li><b>5-&nbsp;Parking</b></li>
+										<li><b>6-&nbsp;WiFi access during the conference</b></li>
+										<li><b>7-&nbsp;Conference proceedings (accepted papers) and workshop materials in electronic form</b></li>
+										<li><b>8-&nbsp;Chance to win prizes (one registrant to be randomly selected during Thursday dinner and one during Friday lunch, but must be present to win)</b></li>
+										<li><b>9-&nbsp;Inclusion of paper in IEEE Xplore (for authors of accepted papers)</b></li>
+										<li><b>10-&nbsp;Chance to win best student poster award (for students enrolling in poster competition)</b></li>
+								</ul>
+								Conference registrants will receive a hardcopy of the conference program, a name badge having the information provided during registration, and instructions for using the WiFi network.
+							</div>
+							</section>
 						</div>
 					</div>
 				</section>
@@ -92,8 +111,8 @@
 					<!-- Sponsors -->
 
 					<ul class="icons sponsor_img">
-						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
-						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/IEEE-logo-blue.png" width="120px !important" height="36px"/></a></li>
+						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/MTTS-logo-blue.jpg" width="50px !important" height="36px"/></a></li>
 					</ul>
 					<ul class="icons sponsor_img">
 						<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
