--- a/Sponsors.html
+++ b/Sponsors.html
@@ -47,12 +47,12 @@
 			<!-- Main -->
 				<section class="wrapper style1 sponsorTxt">
 					<div class="container">
-                  <h2><b><u>Technical Co-Sponsors</u></b></h2>
+                  <!-- <h2><b><u>Technical Co-Sponsors</u></b></h2>
                 		<ul class="icons">
-                			<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="130px" height="45px"/></a></li>
-                			<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="70px" height="40px"/></a></li>
+                			<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/IEEE-logo-blue.png" width="130px" height="45px"/></a></li>
+                			<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/MTTS-logo-blue.jpg" width="70px" height="40px"/></a></li>
                 		</ul>
-                  <h2><b><u>Corporate Sponsors</u></b></h2>
+                  <h2><b><u>Corporate Sponsors</u></b></h2> -->
                     <ul class="icons">
                       <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="280px" height="50px" /></a></li>
                       <li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
@@ -97,8 +97,8 @@
           <!-- Sponsors -->
 
 					<ul class="icons sponsor_img">
-						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
-						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/IEEE-logo-blue.png" width="120px !important" height="36px"/></a></li>
+						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/MTTS-logo-blue.jpg" width="50px !important" height="36px"/></a></li>
 					</ul>
 					<ul class="icons sponsor_img">
 						<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
