--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -122,8 +122,8 @@
 					<!-- Sponsors -->
 
 					<ul class="icons sponsor_img">
-						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/ieee_logo_black.png" width="120px !important" height="36px"/></a></li>
-						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/mtt_logo_black.png" width="50px !important" height="36px"/></a></li>
+						<li><a href="http://www.ieee.org/" class="icon" target="_blank"><img src="images/IEEE-logo-blue.png" width="120px !important" height="36px"/></a></li>
+						<li><a href="https://mtt.org/" class="icon" target="_blank"><img src="images/MTTS-logo-blue.jpg" width="50px !important" height="36px"/></a></li>
 					</ul>
 					<ul class="icons sponsor_img">
 						<li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" /></a></li>
