--- a/Sponsors.html
+++ b/Sponsors.html
@@ -75,7 +75,7 @@
 								<ul class="links">
 									<li><a href="Registration.html" target="_blank">Registration</a></li>
 									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
-									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium%5EWCOCY%60TXSTXSA%7CTXSTXSB%60115.00%60USD%60false%604%603/29/17%603/31/17%603/8/17&app=resvlink&stop_mobi=yes" target="_blank">Conference Lodging</a></li>
 									<li><a href="Schedule.html" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
