--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -48,6 +48,10 @@
 					 <section class="wrapper style1">
 						<div class="container">
 							<div class="row">
+								<p> The IEEE PDF eXpress compliance check tool for our conference is not working yet.   Please skip this step while we resolve this.  <br/>
+								The electronic signing of the IEEE copyright forms will also be functional once this is resolved.</p>
+							</div>
+							<div class="row">
 								<section class="6u 12u(narrower)">
 									<div class="box post">
 										<a href="#" class="image left"><img src="images\toolkit.jpg" alt="" /></a>
