--- a/Schedule.html
+++ b/Schedule.html
@@ -54,9 +54,11 @@
 								<article>
 									<header>
 										<h2>Conference Schedule</h2>
-										<p>Coming Soon!</p>
-									</header>
+										<!-- <p>Coming Soon!</p> -->
 
+										<a href=" https://drive.google.com/file/d/0B_6NhvAit7yYMmx2SnNKcW50TEU/view?usp=sharing" target="_blank">Click here for conference schedule</a><br/>
+									</header>
+									<br/><br/>
 									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
 
 								</article>
