Updated conference lodging info on travel and stay

--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -83,7 +83,18 @@
 										<a href="#" class="image left"><img src="images/lodging.jpg" alt="" /></a>
 										<div class="inner">
 											<h3>Lodging</h3>
-											<p><b><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium%5EWCOCY%60TXSTXSA%7CTXSTXSB%60115.00%60USD%60false%604%603/29/17%603/31/17%603/17/17&app=resvlink&stop_mobi=yes" target="_blank">Conference Lodging</a></b></p>
+											<!-- <p><b><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium%5EWCOCY%60TXSTXSA%7CTXSTXSB%60115.00%60USD%60false%604%603/29/17%603/31/17%603/17/17&app=resvlink&stop_mobi=yes" target="_blank">Conference Lodging</a></b></p> -->
+											<p><b><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium%5EWCOCY%60TXSTXSA%7CTXSTXSB%60115.00%60USD%60false%604%603/29/17%603/31/17%603/17/17&app=resvlink&stop_mobi=yes" target="_blank">Book your group rate for Texas Symposium</a></b>
+											<br/>
+												Texas Symposium
+												<br/>
+												Start date: 3/29/17<br/>
+												End date: 3/31/17<br/>
+												Last day to book: 3/17/17<br/>
+												Marriott hotel(s) offering your special group rate:
+												<br/>
+												<b> Courtyard Waco  for 115.00 USD  per night </b><br/>
+												</p>
 										</div>
 									</div>
 								</section>
