Added link for presentation instruction

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -89,8 +89,9 @@
 									<div class="box post">
 										<a href="#" class="image left"><img src="images/submit.jpg" alt="" /></a>
 										<div class="inner">
-											<h3>Paper Submission</h3>
+											<h3>Paper/Presentation Submission</h3>
 											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>
+											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"> Submit Presentation</a></b></p>
 										</div>
 									</div>
 								</section>
