Updated moved the link for presentation under instructions

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -70,7 +70,8 @@
 										<a href="#" class="image left"><img src="images/instructions.png" alt="" /></a>
 										<div class="inner">
 											<h3>Instructions for Authors</h3>
-											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/></a></b></p>
+											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Author Instructions for Paper</a></b></p>
+											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"> Author Instructions for Presentation</a></b></p>
 										</div>
 									</div>
 								</section>
@@ -89,9 +90,8 @@
 									<div class="box post">
 										<a href="#" class="image left"><img src="images/submit.jpg" alt="" /></a>
 										<div class="inner">
-											<h3>Paper/Presentation Submission</h3>
-											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>
-											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"> Submit Presentation</a></b></p>
+											<h3>Paper Submission</h3>
+											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>											
 										</div>
 									</div>
 								</section>
