added pdf imaged in front of presentation instr. link

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -71,7 +71,7 @@
 										<div class="inner">
 											<h3>Instructions for Authors</h3>
 											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Author Instructions for Paper</a></b></p>
-											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"> Author Instructions for Presentation</a></b></p>
+											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Author Instructions for Presentation</a></b></p>
 										</div>
 									</div>
 								</section>
