add new sponsor mpi

--- a/Sponsors.html
+++ b/Sponsors.html
@@ -57,11 +57,16 @@
                       <li><a href="http://www.ni.com/" class="icon" target="_blank"><img src="images/ni-logo1.png" alt="National Instruments" width="280px" height="50px" /></a></li>
                       <li><a href="http://www.awrcorp.com/" class="icon" target="_blank"><img src="images/AWRLogo.png" width="250px" height="40px"/></a></li>
                       <li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/Keysight-logo.jpg" width="220px" height="60px"/></a></li>
+										</ul>
+										<ul class="icons">
                       <li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" width="250px" height="60px"/></a></li>
                       <li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png" width="260px" height="70px"/></a></li>
 											<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="260px" height="90px"/></a></li>
+									</ul>
+									  <ul class="icons">
 											<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png" width="210px" height="70px"/></a></li>
 											<li><a href="http://www.signalcore.com/" class="icon" target="_blank"><img src="images/SignalCoreLogo.jpg" width="240px" height="60px"/></a></li>
+											<li><a href="http://www.mpi-corporation.com/" class="icon" target="_blank"><img src="images/MPI-Logo.png" width="260px" height="35px"/></a></li>
                     </ul>
 					</div>
 				</section>
