--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -91,7 +91,7 @@
 										<a href="#" class="image left"><img src="images/submit.jpg" alt="" /></a>
 										<div class="inner">
 											<h3>Paper Submission</h3>
-											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>											
+											<p><b><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></b></p>
 										</div>
 									</div>
 								</section>
@@ -140,9 +140,12 @@
 						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
 						<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="100px !important"  height="60px" /></a></li>
 						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+					</ul>
+					<ul class="icons sponsor_img">
 						<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png"/></a></li>
 						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
 						<li><a href="http://www.signalcore.com/" class="icon" target="_blank"><img src="images/SignalCoreLogo.jpg"/></a></li>
+						<li><a href="http://www.mpi-corporation.com/" class="icon" target="_blank"><img src="images/MPI-Logo.png" width="200px"/></a></li>
 					</ul>
 				<br/><br/>
 					<!-- Icons -->
