--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -64,7 +64,7 @@
                     <b>Publications Chair</b><br/>Terrance Blake, Texas Instruments (retired)<br/>
                     <b>Organization Chair</b><br/>Robert J. Marks II, Baylor University<br/>
                     <b>Conference Advisor</b><br/>Randall Jean, Baylor University<br/>
-                    <b>Webmaster</b><br/>Ruchi Rawal, Copart</p>
+                    <b>Webmaster</b><br/>Ruchi Rawal, BCBSTX</p>
                     <br/>
                     <span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="500px"/></span>
 								</article>
@@ -114,9 +114,12 @@
 						<li><a href="http://www.keysight.com/" class="icon" target="_blank"><img src="images/keysight-logo-trans.png" width="120px !important" height="36px" /></a></li>
 						<li><a href="http://www.channelscience.com/" class="icon" target="_blank"><img src="images/ChannelScience-logo.png" width="100px !important"  height="60px" /></a></li>
 						<li><a href="https://www.maurymw.com/" class="icon" target="_blank"><img src="images/Maury-Microwave-Logo.png" /></a></li>
+					</ul>
+					<ul class="icons sponsor_img">
 						<li><a href="https://www.rfmw.com/" class="icon" target="_blank"><img src="images/RFMW-Master-Logo.png"/></a></li>
 						<li><a href="http://www.texsourcesales.com/" class="icon" target="_blank"><img src="images/tex-source.png"/></a></li>
 						<li><a href="http://www.signalcore.com/" class="icon" target="_blank"><img src="images/SignalCoreLogo.jpg"/></a></li>
+						<li><a href="http://www.mpi-corporation.com/" class="icon" target="_blank"><img src="images/MPI-Logo.png" width="200px"/></a></li>
 					</ul>
         <br/><br/>
 					<!-- Icons -->
