fixed speaker issue

--- a/Speakers.html
+++ b/Speakers.html
@@ -50,10 +50,55 @@
 					<div id="content">
 
 						<!-- Content -->
+						<article>
+							<header>
+								<h2><u>Keynote 1 (Thursday, March 30)</u></h2>
+								<h3>History and State-of-The-Art in Large Signal Modeling for RF/Microwave Power Amplifier Development</h3>
+								<h2>	Dr. Larry Dunleavy</h2>
+							</header>
+							<p>An up-to-date survey of large signal (LS) and nonlinear models for power amplifier design will be presented,
+								covering a wide range of device types, along with a brief history for the various categories of models.
+								An emphasis will be placed on compact LS models for GaN, GaAs, and Silicon FET and HEMT models suitable for power amplifier design.
+								Behavioral LS models will be presented along with advantages and disadvantages as compared to compact models.
+								Important developments in related technologies that have had significant impact on large signal modeling,
+								such as automated small and large signal network analyzers, wafer probe capability, and harmonic balance simulator software,
+								will also be discussed.
+							</p>
+							<div class="row">
+								<div class="4u 12u(narrower)">
+								<div id="sidebar">
+									<section>
+										<img src="images/Speaker-LarryDunleavy.jpg" alt="" height="300px" width="250px"/>
+								</section>
+						</div>
+						</div>
 
+							<div class="8u  12u(narrower)">
+								<div id="content">
+								<p>
+									Dr. Larry Dunleavy co-founded Modelithics, Inc. in 2001 to provide improved modeling solutions and
+									high quality microwave measurement services for radio and microwave frequency circuit designers.
+									He is currently serving as President and CEO at Modelithics.
+									He also maintains a position as a Professor within University of South Florida’s Department of Electrical Engineering,
+									 where he has been a faculty member since 1990.
+									 In this role, he has been teaching in the area of RF & Microwave circuits and measurements for over 26 years.
+									 Prior to this he worked as a microwave circuit design engineer at Hughes Aircraft and E-Systems companies.
+								</p>
+								</div></div>
+								</div>
+							</article>
+
+							</div>
+							</div>
+						</section>
+
+				<section class="wrapper style1">
+					<div class="container">
+						<div id="content">
+							<!-- Content -->
 							<article>
 								<header>
-									<h2><u>Keynote 1  (Friday, March 31)</u></h2>
+									<h2><u>Keynote 2  (Friday, March 31)</u></h2>
 									<h3>mm-wave CMOS transceivers for 5G Applications</h3>
 									<h2>Dr. Kamran Entesari</h2>
 							</header>
@@ -78,62 +123,16 @@
 										University, Tehran, Iran, in 1999, and his Ph.D. degree from The University of Michigan at Ann Arbor, in 2005.
 										In 2006, he joined the Department of Electrical and Computer Engineering at Texas A&M University, College Station, where he is currently an Associate Professor.  His research interests include the design of RF/microwave/millimeter-wave integrated circuits and systems, Microwave chemical/biochemical sensing, RF microelectromechanical systems (MEMS), and integrated RF photonics.
 									</p>
-
-									</div></div>
 									<p>
 									Prof. Entesari was a recipient of the 2011 National Science Foundation CAREER Award and was a co-recipient of the 2009 Semiconductor Research Corporation Design Contest Second Place Award, the Best Student Paper Award of the IEEE RFIC Symposium in 2014 (second place), the IEEE Microwave Theory and Techniques Society award in 2011 (third place), and the IEEE Antennas and Propagation Society award in 2013 (Honorable Mention). He is currently a Technical Program Committee Member of the IEEE RFIC Symposium and is an Associate Editor of the IEEE Microwave and Wireless Components Letters journal. He has published more than 100 peer-reviewed IEEE journal and conference papers.
 									</p>
+									</div></div>
+
 									</div>
-								</article></div>
-							<!-- </div>
-						</section>
+								</article>
 
-				<section class="wrapper style1">
-					<div class="container"> -->
-						<div id="content">
-
-							<!-- Content -->
-
-								<article>
-									<header>
-										<h2><u>Keynote 2 (Thursday, March 30)</u></h2>
-										<h3>History and State-of-The-Art in Large Signal Modeling for RF/Microwave Power Amplifier Development</h3>
-										<h2>	Dr. Larry Dunleavy</h2>
-									</header>
-
-
-									<p>An up-to-date survey of large signal (LS) and nonlinear models for power amplifier design will be presented,
-										covering a wide range of device types, along with a brief history for the various categories of models.
-										An emphasis will be placed on compact LS models for GaN, GaAs, and Silicon FET and HEMT models suitable for power amplifier design.
-										Behavioral LS models will be presented along with advantages and disadvantages as compared to compact models.
-										Important developments in related technologies that have had significant impact on large signal modeling,
-										such as automated small and large signal network analyzers, wafer probe capability, and harmonic balance simulator software,
-										will also be discussed.
-									</p>
-									<div class="row">
-										<div class="4u 12u(narrower)">
-								  	<div id="sidebar">
-											<section>
-												<img src="images/Speaker-LarryDunleavy.jpg" alt="" height="300px" width="250px"/>
-										</section>
 								</div>
 							</div>
-
-									<div class="8u  12u(narrower)">
-					          <div id="content">
-										<p>
-											Dr. Larry Dunleavy co-founded Modelithics, Inc. in 2001 to provide improved modeling solutions and
-											high quality microwave measurement services for radio and microwave frequency circuit designers.
-											He is currently serving as President and CEO at Modelithics.
-											He also maintains a position as a Professor within University of South Florida’s Department of Electrical Engineering,
-											 where he has been a faculty member since 1990.
-											 In this role, he has been teaching in the area of RF & Microwave circuits and measurements for over 26 years.
-											 Prior to this he worked as a microwave circuit design engineer at Hughes Aircraft and E-Systems companies.
-										</p>
-										</div></div>
-										</div>
-									</article>
-								</div></div>
 							</section>
 										<!-- Footer -->
 											<div id="footer">
