--- a/Program.html
+++ b/Program.html
@@ -34,6 +34,8 @@
 										<li><a href="Program.html">Program &amp; Events</a></li>
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
+										<li><a href="files/Table of papers with presentaion times and rooms.pdf" target="_blank">Paper presentations</a></li>
+										<li><a href="Tutorials.html">Tutorials</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
                     <li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
