--- a/Schedule.html
+++ b/Schedule.html
@@ -30,6 +30,8 @@
 									<li><a href="Schedule.html">Schedule</a></li>
 									<li><a href="CallForPaper.html">Call for Papers</a></li>
 									<li><a href="Speakers.html">Plenary Speakers</a></li>
+									<li><a href="files/Table of papers with presentaion times and rooms.pdf" target="_blank">Paper presentations</a></li>
+									<li><a href="Tutorials.html">Tutorials</a></li>
 									<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 									<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 								</ul>
@@ -57,10 +59,13 @@
 										<!-- <p>Coming Soon!</p> -->
 
 <!-- 										<a href=" https://drive.google.com/file/d/0B_6NhvAit7yYMmx2SnNKcW50TEU/view?usp=sharing" target="_blank">Click here for conference schedule</a><br/> -->
-										<a href=" https://drive.google.com/drive/folders/0B_6NhvAit7yYamhFcGMyZDcxc1E?usp=sharing" target="_blank">Click here for conference schedule</a><br/>
+										<a href=" https://drive.google.com/drive/folders/0B_6NhvAit7yYamhFcGMyZDcxc1E?usp=sharing" target="_blank">Click here for conference schedule</a><br/><br/><br/>
+										<a href="files/Table of papers with presentaion times and rooms.pdf" target="_blank">Click here for paper presentations schedule</a>
 									</header>
 									<br/><br/>
-									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
+									<!-- <span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span> -->
+									<p>Agenda</p>
+									<embed src="files/TXWMCS 2017 Agenda.pdf" title="Agenda" width="1000px" height="620px" />
 
 								</article>
 
