--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 										<li><a href="Schedule.html">Schedule</a></li>
 										<li><a href="CallForPaper.html">Call for Papers</a></li>
 										<li><a href="Speakers.html">Plenary Speakers</a></li>
+										<li><a href="files/Table of papers with presentaion times and rooms.pdf" target="_blank">Paper presentations</a></li>
+										<li><a href="Tutorials.html">Tutorials</a></li>
 										<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 										<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 									</ul>
@@ -87,7 +89,11 @@
 						<h2>Call for Papers:&nbsp;</h2>
 						<a href="files/CfP_TXWMCS2017.pdf" target="_blank" class="button">View PDF</a>
 						<br/>
-					<span style="text-shadow: 1px 1px 1px #000; background: orange;">	<b>Deadline for paper submissions extended to February 8th, 2017.</b></span>
+					<span style="text-shadow: 1px 1px 1px #000; background: orange;">	<b>
+						The early registration discount ends on March 26th at 11:59pm.
+						<!-- Deadline for paper submissions extended to February 8th, 2017. -->
+					</b>
+					</span>
 
 					</header>
 				</section>
