--- a/Sponsors.html
+++ b/Sponsors.html
@@ -30,6 +30,8 @@
 									<li><a href="Schedule.html">Schedule</a></li>
 									<li><a href="CallForPaper.html">Call for Papers</a></li>
 									<li><a href="Speakers.html">Plenary Speakers</a></li>
+									<li><a href="files/Table of papers with presentaion times and rooms.pdf" target="_blank">Paper presentations</a></li>
+									<li><a href="Tutorials.html">Tutorials</a></li>
 									<li><a href="PosterInformation.html">Student Poster Competition</a></li>
 									<li><a href="PhotoGallery.html#image1">Photo Gallery</a></li>
 								</ul>
