--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -49,10 +49,10 @@
 				<!-- Posts -->
 					 <section class="wrapper style1">
 						<div class="container">
-							<div class="row">
+							<!-- <div class="row">
 								<span style="text-shadow: 1px 1px 1px #000; background: orange;"><b><p> The IEEE PDF eXpress compliance check tool for our conference is not working yet.   Please skip this step while we resolve this.  <br/>
 								The electronic signing of the IEEE copyright forms will also be functional once this is resolved.</p></b></span>
-							</div>
+							</div> -->
 							<div class="row">
 								<section class="6u 12u(narrower)">
 									<div class="box post">
