updated submission link on author toolkit and removed msg from index pg

--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -72,8 +72,9 @@
 										<a href="#" class="image left"><img src="images/instructions.png" alt="" /></a>
 										<div class="inner">
 											<h3>Instructions for Authors</h3>
-											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Author Instructions for Paper</a></b></p>
-											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Author Instructions for Presentation</a></b></p>
+											<p><b><a href="files/TxWMCS Author Instructions 2017.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Instructions for Paper Submission</a></b></p>
+											<p><b><a href="files/Author Instructions for Presentation Submission.pdf" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Instructions for Presentation Submission</a></b></p>
+											<p><b><a href="https://drive.google.com/file/d/0B_6NhvAit7yYbkhWSENrSzdFSzQ/view" target="_blank"><img alt="Instructions for Authors" src="images/pdf.png"  width="70" height="80"/>Instructions for Final Paper Submission</a></b></p>
 										</div>
 									</div>
 								</section>
