--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
 						<h2>Call for Papers:&nbsp;</h2>
 						<a href="files/CfP_TXWMCS2017.pdf" target="_blank" class="button">View PDF</a>
 						<br/>
-					<span style="text-shadow: 1px 1px 1px #000; background: orange;">	<b>
+					<!-- <span style="text-shadow: 1px 1px 1px #000; background: orange;">	<b>
 						The early registration discount ends on March 26th at 11:59pm.
-						<!-- Deadline for paper submissions extended to February 8th, 2017. -->
 					</b>
-					</span>
+					</span> -->
 
 					</header>
 				</section>
